Thu Feb 10 12:49:53 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/Makefile.am: cosmetic cleanup
	* admin-tool/Makefile.am: making sure the desktop-profiles dir
	  is created
	* admin-tool/profilesdialog.py: renamed user to sabayon from protouser
	* Makefile.am sabayon.spec.in: added make rpm target as it's far
	  more convenient right now

Thu Feb 10 12:05:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/Makefile.am: make sure we clean up and rebuild config.py

Thu Feb 10 11:22:18 CET 2005 Daniel Veillard <veillard@redhat.com>

	* admin-tool/Makefile.am lib/Makefile.am lib/config.py.in:
	  moving sabayon-session and sabayon-monitor to @libexecdir@
	  since they should not be launched directly

Thu Feb 10 10:57:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* TODO: docs and man page

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/profilesdialog.py:
	(edit_button_clicked): copy the profile for
	the prototype session and copy it back when
	finished.
	(create_new_profile): remove hackiness.
	
	* lib/sources/gconfsource.py: don't import
	tempfile and shutil, not needed.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add path to sabayon-session.
	
	* admin-tool/profilesdialog.py: use it.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/Makefile.am,
	  lib/config.py.in: sabayon-monitor is currently
	installed in sbindir, not bindir.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon-session.py: import os module.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py:
	(open_x_connection): absolutely horrendous hack to
	have a child process hold open a dummy X connection
	on Xnest.
	(main): remove - its been moved to sabayon-session.
	
	* lib/config.py.in: upd for admin-tool renaming.

2005-02-09  Mark McLoughlin  <markmc@redhat.com>

	* lib/Makefile.am: add protosession.py

2005-02-09  Mark McLoughlin  <markmc@redhat.com>
