@@ -1,0 +1,9 @@
+   Those are issues we need feedback on:
+
+- should we use a single user (sabayon) with a fixed directory (/var/sabayon)
+  and limit the tool to a single running instance or generate 
+  users on the fly with temporary directories ?
+- should we keep the ZIP based packaging format or just a directory
+  with the same files as in the ZIP ? 
+
+
