@@ -18,3 +18,6 @@
  - Inheriting profiles from one another
 
  - man page and docs
+
+ - static vs. dynamic users, and multiple instances of the tool
+
