@@ -38,6 +38,9 @@ rm -fr %{buildroot}
 rm -fr %{buildroot}
 
 %post
+# Create a new user for sabayon, see the ISSUES file
+# note that the home directory will be cleaned up and rebuild
+# each time a config is updated.
 /usr/sbin/useradd -c "Sabayon user" -d /var/sabayon -g nobody -s /sbin/nologin sabayon >/dev/null 2>&1 || /bin/true
 
 %preun
@@ -46,7 +49,7 @@ userdel -r sabayon >/dev/null 2>&1 || /bin/true
 %files
 %defattr(-, root, root)
 
-%doc AUTHORS ChangeLog.gz NEWS README TODO
+%doc AUTHORS ChangeLog.gz NEWS README TODO ISSUES
 %{_datadir}/%{name}/*.py*
 %{_datadir}/%{name}/sources/*.py*
 %{_datadir}/%{name}/glade/sabayon.glade
