@@ -1,3 +1,9 @@
+Thu Feb 10 13:30:58 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* ISSUES Makefile.am TODO sabayon.spec.in: added an ISSUES file
+	  listing the open questions we need feedback on, added to
+	  dist and spec file.
+
 Thu Feb 10 12:49:53 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* lib/Makefile.am: cosmetic cleanup
